feat: add home screen

--- a/skincare/src/main/res/drawable/ic_bag.xml
+++ b/skincare/src/main/res/drawable/ic_bag.xml
@@ -7,10 +7,10 @@
       android:pathData="M8,8L8,7C8,4.791 9.791,3 12,3V3C14.209,3 16,4.791 16,7L16,8"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#483434"
+      android:strokeColor="#fff"
       android:strokeLineCap="round" />
   <path
       android:pathData="M3.586,7.586C3,8.172 3,9.114 3,11V14C3,17.771 3,19.657 4.172,20.828C5.343,22 7.229,22 11,22H13C16.771,22 18.657,22 19.828,20.828C21,19.657 21,17.771 21,14V11C21,9.114 21,8.172 20.414,7.586C19.828,7 18.886,7 17,7H7C5.114,7 4.172,7 3.586,7.586ZM10,12C10,11.448 9.552,11 9,11C8.448,11 8,11.448 8,12V14C8,14.552 8.448,15 9,15C9.552,15 10,14.552 10,14V12ZM16,12C16,11.448 15.552,11 15,11C14.448,11 14,11.448 14,12V14C14,14.552 14.448,15 15,15C15.552,15 16,14.552 16,14V12Z"
-      android:fillColor="#483434"
+      android:fillColor="#fff"
       android:fillType="evenOdd" />
 </vector>
